Navigation mobile style fixes

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -257,9 +257,9 @@ strong {
 	margin: auto;
 	padding: 12px !important;
 	background: none !important;
-	border-color: $orange;
+
 	color: $text-color;
-	border: solid 1px;
+	border: solid 1px $orange;
 }
 
 .btn:hover {
